# selenium-setup

./: .gitattributes  .gitignore  LICENSE  README.md  conf.py  contributing.md  index.rst  requirements.txt  setup.cfg
.github/workflows/: python-test.yml
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: index.doctree  modules.doctree  selenium_drivers.doctree
_build/html/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/docs/: selenium_drivers.html
docs/: CONTRIBUTING.md  _config.yml  objects.inv
docs/_modules/selenium_drivers/: base_driver_setup.html  driver_factory.html  webdriver_setup.html
docs/_sources/docs/: modules.rst.txt  selenium_drivers.rst.txt
docs/docs/: modules.html
selenium_setup/: pyvenv.cfg
selenium_setup/Scripts/: activate  activate.bat
src/config/: logging.ini
src/selenium_drivers/: base_driver_setup.py  driver_factory.py  webdriver_setup.py
tests/: test_chrome_driver_setup.py  test_driver_factory.py
