[metadata]
name = selenium-driver-setup
version = 0.2.7
author = Jorge Cardete Llamas
author_email = publication@deephublearning.com
description = A utility package for Selenium WebDriver setup and handling
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/The-Deep-Hub/selenium-setup
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    selenium>=3.141.0
    webdriver_manager>=3.2.0

[options.packages.find]
where = src